login/register: http error codes
