# src/routes/auth.ts
@@ -1,45 +1,78 @@
 import express from 'express';
-import {login,register} from "../authentication/authentication";
+import {login, LoginReturn, register, RegisterReturn} from "../authentication/authentication";
 import {logger} from "../util/logger";
 import {pool} from "../app";
+import {AuthError, errorTypes} from "../authentication/authError";
+import {instanceOfLoginData, instanceOfRegisterData, LoginData, RegisterData} from "../models/auth";
 
 const router = express.Router();
 
 /*
     user logs in
  */
-router.post('/login',(req,res) => {
+router.post('/login',async (req:any,res:any) => {
 
-    let username = req.body.username;
-    let password = req.body.password;
+    const body:LoginData = req.body;
 
-    login(username,password,pool)
-        .then(result => {
-            res.send(result);
-        })
-        .catch(err => {
+    try {
+        // type check
+        instanceOfLoginData(body);
+
+        const {username,password} = body
+        const data:LoginReturn = await login(username, password, pool);
+
+        res.send(data);
+
+    }catch (err) {
+
+        if(err instanceof AuthError){
+            // user not found
+            if(err.type === errorTypes.userNotExisting) {
+                logger.info(err);
+                res.sendStatus(404);
+            }
+            // wrong password
+            else if(err.type === errorTypes.wrongPassword) {
+                logger.info(err);
+                res.sendStatus(403);
+            }
+        // bad request
+        }else if(err instanceof TypeError) {
+            logger.info(err);
+            res.sendStatus(400);
+        // internal server error
+        }else{
             logger.error(err);
-            res.status(500);
-            res.send();
-        });
+            res.sendStatus(500);
+        }
+    }
 });
 /*
     user registers
  */
-router.post('/register',(req,res) => {
+router.post('/register',async (req,res) => {
 
-    let username = req.body.username;
-    let password = req.body.password;
+    const body:RegisterData = req.body;
 
-    register(username,password,pool)
-        .then(result => {
-            res.send(result);
-        })
-        .catch(err => {
+    try {
+        // type check
+        instanceOfRegisterData(body);
+        const {username,password} = body;
+
+        const data:RegisterReturn = await register(username, password, pool);
+
+        res.send(data);
+    }catch (err) {
+        // bad request
+        if(err instanceof TypeError) {
+            logger.info(err);
+            res.sendStatus(400);
+        // internal server error
+        }else{
             logger.error(err);
-            res.status(500);
-            res.send();
-        });
+            res.sendStatus(500);
+        }
+    }
 });
 
 export default router;
